; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_android-goldfish.c_goldfish_mmc_set_ios.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_android-goldfish.c_goldfish_mmc_set_ios.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmc_host = type { i32 }
%struct.mmc_ios = type { i32 }
%struct.goldfish_mmc_host = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mmc_host*, %struct.mmc_ios*)* @goldfish_mmc_set_ios to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @goldfish_mmc_set_ios(%struct.mmc_host* %0, %struct.mmc_ios* %1) #0 {
  %3 = alloca %struct.mmc_host*, align 8
  %4 = alloca %struct.mmc_ios*, align 8
  %5 = alloca %struct.goldfish_mmc_host*, align 8
  store %struct.mmc_host* %0, %struct.mmc_host** %3, align 8
  store %struct.mmc_ios* %1, %struct.mmc_ios** %4, align 8
  %6 = load %struct.mmc_host*, %struct.mmc_host** %3, align 8
  %7 = call %struct.goldfish_mmc_host* @mmc_priv(%struct.mmc_host* %6)
  store %struct.goldfish_mmc_host* %7, %struct.goldfish_mmc_host** %5, align 8
  %8 = load %struct.mmc_ios*, %struct.mmc_ios** %4, align 8
  %9 = getelementptr inbounds %struct.mmc_ios, %struct.mmc_ios* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.goldfish_mmc_host*, %struct.goldfish_mmc_host** %5, align 8
  %12 = getelementptr inbounds %struct.goldfish_mmc_host, %struct.goldfish_mmc_host* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.goldfish_mmc_host*, %struct.goldfish_mmc_host** %5, align 8
  %14 = getelementptr inbounds %struct.goldfish_mmc_host, %struct.goldfish_mmc_host* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.goldfish_mmc_host*, %struct.goldfish_mmc_host** %5, align 8
  %17 = getelementptr inbounds %struct.goldfish_mmc_host, %struct.goldfish_mmc_host* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  ret void
}

declare dso_local %struct.goldfish_mmc_host* @mmc_priv(%struct.mmc_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
